plugins {
    id 'eclipse'
    id 'net.minecraftforge.gradle' version '5.1.+'
}

version = '1.19-1.1.0.0'
group = 'fi.kissakala'
base.archivesName = 'pishockmc'

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}"
minecraft {
    mappings channel: 'official', version: '1.19.4'

    runs {
        client {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            property 'forge.enabledGameTestNamespaces', 'pishockmc'

            mods {
                pishockmc {
                    source sourceSets.main
                }
            }
        }
    }
}

// Include resources generated by data generators.
sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {
    // ForgeGradle automatically adds the Forge maven and Maven Central
}

dependencies {
    minecraft 'net.minecraftforge:forge:1.19.4-45.1.0'
}

jar {
    manifest {
        attributes([
                "Specification-Title"     : "PiShock for Minecraft",
                "Specification-Vendor"    : "JHaiko",
                "Specification-Version"   : "1",
                "Implementation-Title"    : project.name,
                "Implementation-Version"  : project.jar.archiveVersion,
                "Implementation-Vendor"   : "JHaiko",
                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        ])
    }
}

jar.finalizedBy('reobfJar')

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}